src/objects/Progress_Note__c.object
<CustomObject>
    <fields>
        <fullName>Signature_on_File__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <label>Signature on File</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signs_of_Decompensation__c</fullName>
        <label>Signs of Decompensation</label>
        <picklist>
            <picklistValues>
                <fullName>No signs of decomposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not able to assess at this time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skills_transferred_to_consultee__c</fullName>
        <inlineHelpText>Skills transferred to consultee (teacher, tss, parent/guardian, etc.), and how transferred?</inlineHelpText>
        <label>Skills transferred to consultee</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sleep_Check_Conducted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sleep Check Conducted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff_Credentials_Current__c</fullName>
        <description>This formula field always has the current value of the staff name&apos;s title. This is NOT the value that we want on the OH-FCT page layout as we&apos;re trying to get the title of the person as to the closest time when they created the note.</description>
        <formula>Staff_Name__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Staff Credentials Current</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Credentials__c</fullName>
        <label>Staff Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Employee_ID__c</fullName>
        <description>Employee Number from the User Object for the Staff Name selected on the Progress Note.</description>
        <formula>Staff_Name__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Practitioner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Progress_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time_Only__c</fullName>
        <description>Time portion of start date/time</description>
        <label>Service Start Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Enter the date and time service delivery started</description>
        <inlineHelpText>Enter the date and time service delivery started</inlineHelpText>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Structured_Family_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Structured Family Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse__c</fullName>
        <label>Substance Abuse</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Significant Changes Reported or Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Substance_Use_Abuse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Substance Use/Abuse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taking_Medication_as_Prescribed__c</fullName>
        <label>Taking Medication as Prescribed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes taking medication as prescribed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not able to assess at this time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not taking medication as prescribed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Telephone_Crisis_Response_Units__c</fullName>
        <label>Telephone Crisis Response Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Telephone_Crisis_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Telephone Crisis Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Mentoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Therapeutic Mentoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Therapy_Discipline__c</fullName>
        <description>Used for neurorestorative il role and used for therapy record type</description>
        <label>Therapy Discipline</label>
        <picklist>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woodshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Productive Activity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thought_Process_Orientation__c</fullName>
        <label>Thought Process/Orientation</label>
        <picklist>
            <picklistValues>
                <fullName>No Significant Changes Reported or Observed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thought_Process__c</fullName>
        <label>Thought Process</label>
        <picklist>
            <picklistValues>
                <fullName>Logical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illogical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Driving__c</fullName>
        <inlineHelpText>Enter in Minutes</inlineHelpText>
        <label>Time Spent Driving</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_spent_rendering_Service__c</fullName>
        <inlineHelpText>Enter in Minutes</inlineHelpText>
        <label>Time Spent Rendering Service</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic_Behavior_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behavior Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic_Diagnostic_Psycho_education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic Psycho-education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic_Family_Interactions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Interactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic_If_Other__c</fullName>
        <label>If Other:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Life_Book_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life Book Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic_Separation_Loss_and_Grief_Issues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Separation, Loss and Grief Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic_Shared_Parenting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shared Parenting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic_Successful_Adaptation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Successful Adaptation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic_TFP_Rules_of_the_Road__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TFP Rules of the Road</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Topic_Treatment_Goal_Review_PCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treatment Goal Review (PCP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <description>Duration (In Minutes) = End Time - Start Time</description>
        <formula>(End_Time__c  -Start_Time__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Duration (In Minutes) = End Time - Start Time</inlineHelpText>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Transportation_Time__c</fullName>
        <inlineHelpText>Time in minutes. NOTE: Start and End times above MUST be for exact billable face-to-face time - not transporting time.</inlineHelpText>
        <label>Total Transportation Time</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Hidden__c</fullName>
        <formula>Service_Assignment__r.Service_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type (Hidden)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Note__c</fullName>
        <description>For AZ OPT To show the field on the detail page layout</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Of Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>created for NeuroRestorative IL role and rec type called &quot;Therapy&quot;</description>
        <label>Type of Treatment</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Treatment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Activity__c</fullName>
        <label>Type of Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly Team Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCP-Development (I&amp;O)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caregiver Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skill Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Going Assessment and Planning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Contact__c</fullName>
        <inlineHelpText>Meeting type that took place.</inlineHelpText>
        <label>Type of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>No-Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Face-To-Face</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telehealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correspondence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Service__c</fullName>
        <label>Type of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Unit(s)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Discipline__c</fullName>
        <description>This will have the discipline of the user who is creating the note.</description>
        <label>User Discipline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Violent_Bx_Type__c</fullName>
        <label>Violent Bx Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Violent_Bx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Violent Bx</label>
        <type>Checkbox</type>
    </fields>
    <label>Progress Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>By_Create_Date</fullName>
        <columns>NAME</columns>
        <columns>Is_Note_Late__c</columns>
        <columns>Start_Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Total_Time__c</columns>
        <columns>Program__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <label>My Team&apos;s Notes</label>
        <sharedTo>
            <group>Admins</group>
            <group>All_TMN</group>
            <group>Clinical_Force_NC_Goldsboro</group>
            <group>Clinical_Force_NC_IFCS_Five_County</group>
            <group>Clinical_Force_NC_IFCS_Triangle</group>
            <group>Clinical_Force_NC_Raleigh</group>
            <group>NC_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FL_My_Team_s_Notes</fullName>
        <columns>NAME</columns>
        <columns>Start_Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Program__c</columns>
        <columns>Action_Plan__c</columns>
        <columns>Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Progress_Note__c.FL_FSS_Progress_Note</value>
        </filters>
        <label>FL-My Team&apos;s Notes</label>
        <sharedTo>
            <group>Admins</group>
            <group>All_TMN</group>
            <group>Clinical_Force_NC_Goldsboro</group>
            <group>Clinical_Force_NC_IFCS_Five_County</group>
            <group>Clinical_Force_NC_IFCS_Triangle</group>
            <group>Clinical_Force_NC_Raleigh</group>
            <group>NC_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Progress_Notes</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Progress Notes</label>
    </listViews>
    <listViews>
        <fullName>My_Progress_Notes_Unfinalized</fullName>
        <columns>Date_of_Service_String__c</columns>
        <columns>Total_Time__c</columns>
        <columns>NAME</columns>
        <columns>Auth_Service_Code__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Program_Detail__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Disregard_Note__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Created_by_Title__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My Progress Notes-Unfinalized</label>
        <sharedTo>
            <roleAndSubordinates>NC</roleAndSubordinates>
            <roleAndSubordinates>NCGreensboro</roleAndSubordinates>
            <roleAndSubordinates>NCRockingham</roleAndSubordinates>
            <roleAndSubordinates>NC_Charlotte</roleAndSubordinates>
            <roleAndSubordinates>NC_Charlotte_Clinical_Users</roleAndSubordinates>
            <roleAndSubordinates>NC_Greensboro_Clinical_Users</roleAndSubordinates>
            <roleAndSubordinates>NC_Raleigh</roleAndSubordinates>
            <roleAndSubordinates>NC_Raleigh_Clinical_Users</roleAndSubordinates>
            <roleAndSubordinates>NC_Rockingham_Clinical_Users</roleAndSubordinates>
            <roleAndSubordinates>NC_Wilmington</roleAndSubordinates>
            <roleAndSubordinates>NC_Wilmington_Clinical_Users</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Progress_Note_Approval_Queue</fullName>
        <columns>NAME</columns>
        <columns>Person_Being_Served__c</columns>
        <columns>Service_Assignment__c</columns>
        <columns>Admission__c</columns>
        <columns>Progress_Note_Number__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Purpose_Nature_of_Service__c</columns>
        <columns>Purpose_of_Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Progress Note Approval Queue</label>
        <queue>Progress_Note_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rejected_Progress_Notes</fullName>
        <columns>NAME</columns>
        <columns>Person_Being_Served__c</columns>
        <columns>Plan__c</columns>
        <columns>Admission__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Needs Refinement</value>
        </filters>
        <label>Rejected Progress Notes</label>
    </listViews>
    <nameField>
        <label>Progress Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Progress Notes</pluralLabel>
    <recordTypes>
        <fullName>AZ_OPT</fullName>
        <active>true</active>
        <label>AZ - OPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>CA_FSS</fullName>
        <active>true</active>
        <description>This recordtype is used to support CA FSS group</description>
        <label>CA FSS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Management_Note</fullName>
        <active>true</active>
        <label>Case Management Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>FL_FSS_Progress_Note</fullName>
        <active>true</active>
        <label>FL-FSS Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>IN_FCT</fullName>
        <active>true</active>
        <label>IN-FCT</label>
    </recordTypes>
    <recordTypes>
        <fullName>MA_FCT</fullName>
        <active>true</active>
        <label>MA-FCT</label>
    </recordTypes>
    <recordTypes>
        <fullName>MA_IFCS_Progress_Note</fullName>
        <active>false</active>
        <description>Use this record type for Persons in MA for IFCS H2022 (IIH) service type.</description>
        <label>IFCS-MA - Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>MD_FCT</fullName>
        <active>true</active>
        <label>MD-FCT</label>
    </recordTypes>
    <recordTypes>
        <fullName>MD_IFCS_Progress_Note</fullName>
        <active>false</active>
        <label>IFCS-MD - Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>NC_Child_and_Family_Team</fullName>
        <active>true</active>
        <description>Use this record type for Persons in NC for H2022-Intensive In-Home or IIH rollup service types.</description>
        <label>NC - Child and Family Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>NC_IFCS_Progress_Note</fullName>
        <active>true</active>
        <description>Use this record type for Persons in NC for T1023, H2022, H0032,  90801, 90804, 90806, 90808, 90846, 90847, 90849, or H0004 service types.</description>
        <label>NC - FCT</label>
    </recordTypes>
    <recordTypes>
        <fullName>NC_IIH_Progress_Note</fullName>
        <active>true</active>
        <description>Use this record type for Persons in NC for H2022-Intensive  In-Home or IIH rollup service types.</description>
        <label>NC - IIH</label>
    </recordTypes>
    <recordTypes>
        <fullName>NC_IMAPP_Progress_Note</fullName>
        <active>true</active>
        <description>Use this record type for Persons in NC for H2022-Intensive  In-Home or IIH rollup service types.</description>
        <label>NC - IMAPP</label>
    </recordTypes>
    <recordTypes>
        <fullName>NC_OPT_Progress_Note</fullName>
        <active>true</active>
        <label>NC - OPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>NC_TFC</fullName>
        <active>true</active>
        <label>NC - TFC</label>
    </recordTypes>
    <recordTypes>
        <fullName>NC_Wks_1_6_TFC</fullName>
        <active>true</active>
        <label>NC - Wks 1-6 TFC</label>
    </recordTypes>
    <recordTypes>
        <fullName>NJ_Progress_Note</fullName>
        <active>false</active>
        <description>Use this record type for Persons in NJ.</description>
        <label>NJ - Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>OH_FCT</fullName>
        <active>true</active>
        <label>OH-ARY</label>
    </recordTypes>
    <recordTypes>
        <fullName>PA_BHRS_BSC</fullName>
        <active>false</active>
        <description>Use this record type for Persons in Philadelphia and Delaware County for BHRS BSC service types.</description>
        <label>PA - BHRS (BSC) Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>PA_BHRS_MT</fullName>
        <active>false</active>
        <description>Use this record type for Persons in Philadelphia and Delaware County for BHRS MT service types.</description>
        <label>PA - BHRS (MT) Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>PA_CaseMgmnt_Progress_Note</fullName>
        <active>false</active>
        <description>Use this record type for Persons in PA Case Management ICM/RC/CPS service types.</description>
        <label>PA - CaseMgmnt Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>PA_FBS_Progress_Note</fullName>
        <active>false</active>
        <description>Use this record type for Persons in PA for FBS service types.</description>
        <label>PA - FBS Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Progress_Note</fullName>
        <active>true</active>
        <description>Use this record type for PA; BHRS-BSC, MT, TSS or A&amp;A for Berks County: BHRS-TSS for Philadelphia and Delaware County. NC; Child and Family Team.</description>
        <label>Progress Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>RW_Case_Management</fullName>
        <active>true</active>
        <label>RW Case Management</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shift_Note</fullName>
        <active>true</active>
        <label>Shift Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>Therapy</fullName>
        <active>true</active>
        <description>Progress Note for NeuroRestorative IL</description>
        <label>Therapy</label>
    </recordTypes>
    <recordTypes>
        <fullName>VA_IFCS_Progress_Note</fullName>
        <active>false</active>
        <label>IFCS-VA - Progress Note</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Arizona_ProgressNote_Length</fullName>
        <active>true</active>
        <description>Restrict Users Ability to Submit Note Longer than 120 mins</description>
        <errorConditionFormula>AND(RecordType.DeveloperName == &apos;AZ_OPT&apos;,  (End_Time__c - Start_Time__c)*24*60 &gt; 120, NOT( $User.Alias =&apos;inte&apos;))</errorConditionFormula>
        <errorMessage>The total duration cannot be more than 120 mins. Please correct start and/or end time for accuracy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Arizona_Signature_Count_must_be_positive</fullName>
        <active>true</active>
        <description>When creating a new Progress Note for AZ, the user must set a positive number of signatures required.</description>
        <errorConditionFormula>AND( RecordType.DeveloperName == &apos;AZ_OPT&apos;,  Number_of_Required_Signatures__c &lt;= 0, NOT( $User.Alias =&apos;inte&apos;))</errorConditionFormula>
        <errorDisplayField>Number_of_Required_Signatures__c</errorDisplayField>
        <errorMessage>At least 1 signature is required on all notes. Please change the value to be 1 or greater.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Collateral_Contact_Other_Selected</fullName>
        <active>true</active>
        <description>When Other is selected in the picklist, you have to fill in the &quot;Other Collateral Contact&quot; field. When it isn&apos;t selected, you can&apos;t fill in the &quot;Other Collateral Contact&quot; field.</description>
        <errorConditionFormula>ISPICKVAL( Collateral_Contact__c, &apos;Other&apos;) &amp;&amp;  ISBLANK(Other_Collateral_Contact__c) || !ISBLANK(Other_Collateral_Contact__c) &amp;&amp;  !ISPICKVAL( Collateral_Contact__c, &apos;Other&apos;)</errorConditionFormula>
        <errorDisplayField>Other_Collateral_Contact__c</errorDisplayField>
        <errorMessage>When Other is selected in the picklist, you have to fill in the &quot;Other Collateral Contact&quot; field. When it isn&apos;t selected, you can&apos;t fill in the &quot;Other Collateral Contact&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_time_must_be_after_start_time</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Time__c &gt;  End_Time__c</errorConditionFormula>
        <errorMessage>The end time cannot be before the start time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FL_AssessmentOnlySaNotes_30DayCheck</fullName>
        <active>true</active>
        <description>FL allows 30 days from adm. to create trtmnt pln, during which they will write progress notes to document/bill for plan creation time. This rule stops FL users from entering a start date/time for notes more than 30 days from Assmt. Only SA  start date.</description>
        <errorConditionFormula>( Purpose_Service_is_Billable__c ) &amp;&amp; ( BEGINS(RecordType.DeveloperName, &apos;FL&apos;) )  &amp;&amp; ( Service_Assignment__r.RecordType.DeveloperName  = &apos;Assessment_Only&apos;) &amp;&amp; (DATEVALUE(Start_Time__c)   &gt; ( Service_Assignment__r.Start_Date__c  + 31))</errorConditionFormula>
        <errorDisplayField>Start_Time__c</errorDisplayField>
        <errorMessage>The Start Date/Time you have selected for this Progress Note is greater than 30 days from the start date of this Assessment Only Service Assignment and the note is flagged as Billable. Please check the Start Date/Time, or make the note non-billable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Sleep_Check_True_Prevent_Billable_Tru</fullName>
        <active>true</active>
        <description>A validation rule to pair with the workflow rule that changes &quot;Purpose/Service is Billable&quot; to false if &quot;Sleep Check Conducted&quot; is saved as True.  This rule prevents going in after that save and manually changing the &quot;Purpose/Service is Billable&quot; to true.</description>
        <errorConditionFormula>AND( Sleep_Check_Conducted__c  = true ,  Purpose_Service_is_Billable__c = true)</errorConditionFormula>
        <errorMessage>This progress note cannot have the &quot;Purpose/Service is Billable&quot; field checked if the &quot;Sleep Check Conducted&quot; field is also checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Locked</fullName>
        <active>true</active>
        <description>Locked__c</description>
        <errorConditionFormula>AND(Locked__c, NOT(ISCHANGED(Signature_on_File__c)), NOT( $User.Alias = &apos;inte&apos;), NOT(ISPICKVAL(Status__c, &apos;Disregard&apos;)))</errorConditionFormula>
        <errorMessage>This Progress Note has been locked, it can not be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mileage_Numeric</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(
  OR(
     LEN(Mileage__c)=0, 
     ISNUMBER(Mileage__c)
    )
  )</errorConditionFormula>
        <errorDisplayField>Mileage__c</errorDisplayField>
        <errorMessage>Please enter only numeric values.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mileage_OneDecimals</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISNUMBER(Mileage__c), NOT(
  OR(
     LEN(Mileage__c)=0, 
     REGEX(Mileage__c, &quot;[0-9]+(\\.[0-9]?)?&quot;)
    )
  ), false)</errorConditionFormula>
        <errorDisplayField>Mileage__c</errorDisplayField>
        <errorMessage>Please enter only one digit after the decimal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NC_IFCS_Non_Payable_Check</fullName>
        <active>true</active>
        <description>If Non Payable is checked on NC IFCS Progress Notes the user must select atleast one reason why.</description>
        <errorConditionFormula>AND(Non_Payable_Outcome__c=TRUE, Called_Client_Family_phone_disconnected__c =false, No_Show__c =false, Client_Family_not_home_left_note_on_door__c =false, Client_Family_home_but_refusing_service__c =false, Client_placed_in_detention__c =false, Client_placed_in_hospital__c =false, Client_placed_in_group_home__c=false,  Client_placed_in_Substance_Abuse_program__c=false, Family_Life_Cycle__c =false, Family_Assessment_Evaluation__c =false, Structured_Family_Assessment__c =false, Generalization__c =false, Co_Therapist_unable_to_bill__c =false, Field_Support__c =false, Child_and_Family_Team_Meeting__c =false, FCT_Fidelity_Measure__c =false, FCT_Check_Off__c =false, Called_Client_Family_left_voice_message__c =false, Called_collateral_left_voice_message__c =false )</errorConditionFormula>
        <errorDisplayField>Non_Payable_Outcome__c</errorDisplayField>
        <errorMessage>Non-Payable Outcome checkbox is checked but no outcomes have been selected. Please select an outcome.</errorMessage>
    </validationRules>
</CustomObject>